--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,5 +1,5 @@
 ---
-import { Box } from '#astro-custom-layout-components/index.ts';
+import Box  from '#astro-custom-layout-components/Box/index.astro';
 // import Prose from '#components/Prose.astro';
 
 interface Props {
