--- a/src/components/cq/CqCard.astro
+++ b/src/components/cq/CqCard.astro
@@ -1,6 +1,6 @@
 ---
 import ThumbNail from '#assets/400x300.svg';
-import { Box } from '#astro-custom-layout-components/index.ts';
+import Box  from '#astro-custom-layout-components/Box/index.astro';
 
 interface Props {
   title?: string;
