--- a/src/layouts/SimpleLayout.astro
+++ b/src/layouts/SimpleLayout.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+
 // import { z } from 'astro:content';
 import BaseHead from '#components/BaseHead.astro';
 // import { Cover, Center, Box, Stack } from '#astro-custom-layout-components/index.ts';
