--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,8 @@
 ---
 import { getCollection } from 'astro:content';
 
-import { Box, Switcher } from '#astro-custom-layout-components/index.ts';
+import Box from '#astro-custom-layout-components/Box/index.astro';
+import Switcher from '#astro-custom-layout-components/Switcher/index.astro';
 import FormattedDate from '#components/FormattedDate.astro';
 import Layout from '#layouts/Layout.astro';
 
