--- a/src/pages/demo/cq-switcher-demo.astro
+++ b/src/pages/demo/cq-switcher-demo.astro
@@ -1,10 +1,9 @@
 ---
-import { Box } from '#astro-custom-layout-components/index.ts';
+import Box  from '#astro-custom-layout-components/Box/index.astro';
 import CqSwitcher from '#components/cq/CqSwitcher.astro';
 import Layout from '#layouts/Layout.astro';
 ---
 
-<!-- heroImage="/blog-placeholder-about.jpg" -->
 <Layout
   title="test Me"
   description="Lorem ipsum dolor sit amet"
