--- a/src/pages/demo/reel-demo.astro
+++ b/src/pages/demo/reel-demo.astro
@@ -14,7 +14,7 @@ const getRandomSrc = () => {
 };
 ---
 
-<Layout centerWidth="100vw">
+<Layout maxW="100vw">
   <Reel itemWidth="10rem" noBar={false} space="var(--s3)">
     <Card>
       <Frame ratio="16:9" slot="image-slot">
