--- a/src/components/DescriptionList/Detail.astro
+++ b/src/components/DescriptionList/Detail.astro
@@ -1,18 +1,11 @@
 ---
-import { Box, Switcher } from '#astro-custom-layout-components/index.ts';
-
 interface Props {
   dt: string;
-  dtColor?: string;
+
   dd: string;
-  ddColor?: string;
 }
 
-const {
-  dtColor = 'text-gray-900',
-  ddColor = 'text-gray-700',
-  ...rest
-} = Astro.props;
+const { ...rest } = Astro.props;
 ---
 
 <div class="box">
