--- a/src/layouts/SplashLayout.astro
+++ b/src/layouts/SplashLayout.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+
 import { Image } from 'astro:assets';
 
 import { Frame, Switcher } from '#astro-custom-layout-components/index.ts';
