--- a/src/pages/demo/modal-demo.astro
+++ b/src/pages/demo/modal-demo.astro
@@ -12,7 +12,7 @@
 
 // import Modal from '#ui/astro/modal/Modal.astro';
 // import Modal from '#web-component/astro-modal/index.astro';
-import { Box } from '#astro-custom-layout-components/index.ts';
+import Box  from '#astro-custom-layout-components/Box/index.astro';
 import Layout from '#layouts/BareLayout.astro';
 // import { isOpen } from '#store/index.ts';
 ---
