--- a/src/astro-custom-layout-components/Center/index.astro
+++ b/src/astro-custom-layout-components/Center/index.astro
@@ -1,7 +1,7 @@
 ---
 import './Center.css';
 
-import type { RmUnitType } from '../Types.ts';
+import type { RmUnitType } from '../Types';
 
 interface Props {
   max?: RmUnitType;
@@ -17,4 +17,4 @@ const props = Astro.props;
   <slot />
 </center-l>
 
-<script src="./Center.js"></script>
+<script src="./Center"></script>
