--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -71,4 +71,5 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
   src="https://early.webawesome.com/webawesome@3.0.0-alpha.11/dist/webawesome.loader.js"
 ></script>
 
+<script is:inline src="https://www.google.com/recaptcha/api.js"></script>
 <ClientRouter />
