--- a/src/components/Card/index.astro
+++ b/src/components/Card/index.astro
@@ -7,9 +7,8 @@ import { getEntry } from 'astro:content';
 // import type { CollectionEntry } from 'astro:content';
 import { format } from 'date-fns';
 
-import { Frame, Stack } from '#astro-custom-layout-components/index.ts';
+import { Frame, Stack } from '#astro-custom-layout-components/index.js';
 
-// import type { BlogSchemaType } from '#schemas/index.ts';
 import CardTop from './top-bottom.astro';
 
 // interface Props extends HTMLAttributes<'a'> extends CollectionEntry<'blog'>.data;
