--- a/src/components/DemoMenu.astro
+++ b/src/components/DemoMenu.astro
@@ -1,5 +1,5 @@
 ---
-import { layoutDemoPages } from '#lib/getPages.ts';
+import { layoutDemoPages } from '#lib/getPages.js';
 
 // const pathname = Astro.url.pathname.replace(import.meta.env.BASE_URL, '');
 // const subpath = pathname.match(/[^/]+/g);
