--- a/src/components/TopLevelPages.astro
+++ b/src/components/TopLevelPages.astro
@@ -1,5 +1,5 @@
 ---
-import { layoutDemoPages, topLevelPages } from '#lib/getPages.ts';
+import { layoutDemoPages, topLevelPages } from '#lib/getPages.js';
 ---
 
 <h4>Main Pages</h4>
