--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -9,10 +9,10 @@ import {
   Center,
   Frame,
   Stack,
-} from '#astro-custom-layout-components/index.ts';
+} from '#astro-custom-layout-components/index.js';
 import FormattedDate from '#components/FormattedDate.astro';
 import Layout from '#layouts/Layout.astro';
-import { blogSchema } from '#schemas/index.ts';
+import { blogSchema } from '#schemas/index.js';
 
 // interface Props {
 //   data: BlogSchemaType;
