--- a/src/layouts/SplashLayout.astro
+++ b/src/layouts/SplashLayout.astro
@@ -3,7 +3,7 @@ import '../styles/global.css';
 
 import { Image } from 'astro:assets';
 
-import { Frame, Switcher } from '#astro-custom-layout-components/index.ts';
+import { Frame, Switcher } from '#astro-custom-layout-components/index.js';
 import BaseHead from '#components/BaseHead.astro';
 
 import Andy from '../assets/Andy.jpg';
