--- a/src/pages/demo/switcher-demo.astro
+++ b/src/pages/demo/switcher-demo.astro
@@ -1,6 +1,6 @@
 ---
 import ThumbNail from '#assets/400x300.svg';
-import { Box, Switcher } from '#astro-custom-layout-components/index.ts';
+import { Box, Switcher } from '#astro-custom-layout-components/index.js';
 import Layout from '#layouts/Layout.astro';
 ---
 
