--- a/src/pages/splash.astro
+++ b/src/pages/splash.astro
@@ -1,6 +1,6 @@
 ---
 // import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
-import { Box, Stack } from '#astro-custom-layout-components/index.ts';
+import { Box, Stack } from '#astro-custom-layout-components/index.js';
 import Layout from '#layouts/SplashLayout.astro';
 ---
 
