--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from 'astro:content';
 
-import { Box, Stack } from '#astro-custom-layout-components/index.ts';
+import { Box, Stack } from '#astro-custom-layout-components/index.js';
 import Card from '#components/Card/index.astro';
 import Layout from '#layouts/Layout.astro';
 
