--- a/src/astro-custom-layout-components/Cover/index.astro
+++ b/src/astro-custom-layout-components/Cover/index.astro
@@ -1,7 +1,7 @@
 ---
 import './Cover.css';
 
-import type { RmUnitType } from '../Types.ts';
+import type { RmUnitType } from '../Types';
 
 interface Props {
   centeredElement?: string; // h1
