--- a/src/astro-custom-layout-components/Grid/index.astro
+++ b/src/astro-custom-layout-components/Grid/index.astro
@@ -1,7 +1,7 @@
 ---
 import './Grid.css';
 
-import type { RmUnitType } from '../Types.ts';
+import type { RmUnitType } from '../Types';
 
 interface Props {
   min?: RmUnitType; //"250px"
