--- a/src/astro-custom-layout-components/Icon/index.astro
+++ b/src/astro-custom-layout-components/Icon/index.astro
@@ -1,7 +1,7 @@
 ---
 import './Icon.css';
 
-import type { RmUnitType } from '../Types.ts';
+import type { RmUnitType } from '../Types';
 
 interface Props {
   label?: string; //Turns the element into an image in assistive technologies and adds an aria-label of the value
