--- a/src/components/BoxWithHeader.astro
+++ b/src/components/BoxWithHeader.astro
@@ -1,5 +1,5 @@
 ---
-import { Box, Center, Stack } from '#astro-custom-layout-components/index.ts';
+import { Box, Center, Stack } from '#astro-custom-layout-components/index.js';
 ---
 
 <Box padding="0" borderWidth="0">
