--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { Box, Cluster } from '#astro-custom-layout-components/index.ts';
+import { Box, Cluster } from '#astro-custom-layout-components/index.js';
 import FontSizedIcon from '#components/FontSizedIcon/index.astro';
 const today = new Date();
 ---
