--- a/src/components/MyStackDemo.astro
+++ b/src/components/MyStackDemo.astro
@@ -1,5 +1,5 @@
 ---
-import { Box, Center, Stack } from '#astro-custom-layout-components/index.ts';
+import { Box, Center, Stack } from '#astro-custom-layout-components/index.js';
 
 function generateRandomString() {
   const length = 8;
