--- a/src/layouts/SimpleLayout.astro
+++ b/src/layouts/SimpleLayout.astro
@@ -3,7 +3,7 @@ import '../styles/global.css';
 
 // import { z } from 'astro:content';
 import BaseHead from '#components/BaseHead.astro';
-// import { Cover, Center, Box, Stack } from '#astro-custom-layout-components/index.ts';
+// import { Cover, Center, Box, Stack } from '#astro-custom-layout-components/index.js';
 // import type { RmUnitType } from '@cc/Types.js';
 
 // import Header from '#components/Header.astro';
