--- a/src/pages/demo/cluster-demo.astro
+++ b/src/pages/demo/cluster-demo.astro
@@ -1,5 +1,5 @@
 ---
-import { Cluster } from '#astro-custom-layout-components/index.ts';
+import { Cluster } from '#astro-custom-layout-components/index.js';
 import Layout from '#layouts/Layout.astro';
 ---
 
