--- a/src/pages/demo/colums-demo.astro
+++ b/src/pages/demo/colums-demo.astro
@@ -2,7 +2,7 @@
 import { Image } from 'astro:assets';
 
 import Layout from '#layouts/Layout.astro';
-import { getRandomPicRemote } from '#lib/index.ts';
+import { getRandomPicRemote } from '#lib/index.js';
 
 const W = '300';
 const H = '200';
