--- a/src/pages/demo/imposter-demo.astro
+++ b/src/pages/demo/imposter-demo.astro
@@ -1,5 +1,5 @@
 ---
-import { Grid } from '#astro-custom-layout-components/index.ts';
+import { Grid } from '#astro-custom-layout-components/index.js';
 import SkeletonCard from '#components/SkeletonCard.astro';
 import Layout from '#layouts/Layout.astro';
 ---
