--- a/src/pages/demo/modal-demo.astro
+++ b/src/pages/demo/modal-demo.astro
@@ -12,9 +12,8 @@
 
 // import Modal from '#ui/astro/modal/Modal.astro';
 // import Modal from '#web-component/astro-modal/index.astro';
-import Box  from '#astro-custom-layout-components/Box/index.astro';
+import Box from '#astro-custom-layout-components/Box/index.astro';
 import Layout from '#layouts/BareLayout.astro';
-// import { isOpen } from '#store/index.ts';
 ---
 
 <Layout>
@@ -25,7 +24,7 @@ import Layout from '#layouts/BareLayout.astro';
 </Layout>
 
 <script>
-  import { isOpen } from '#store/index.ts';
+  import { isOpen } from '#store/index.js';
   console.log('isOpen.get()' + isOpen.get());
   const buttons = document.querySelectorAll('button.modal');
   // Handle clicks on each button.
