--- a/src/pages/endpoints/index.astro
+++ b/src/pages/endpoints/index.astro
@@ -1,6 +1,6 @@
 ---
 import Box from '#astro-custom-layout-components/Box/index.astro';
-import { Stack } from '#astro-custom-layout-components/index.ts';
+import { Stack } from '#astro-custom-layout-components/index.js';
 import Dialouge from '#components/Dialouge.astro';
 import Layout from '#layouts/Layout.astro';
 // import FeaturedPost from '#components/FeaturedPost.astro';
