--- a/src/pages/captcha/index.astro
+++ b/src/pages/captcha/index.astro
@@ -28,7 +28,7 @@ import Layout from '#layouts/Layout.astro';
     });
   </script>
 
-  <script is:inline>
+  <!-- <script is:inline>
     function onSubmit(token) {
       fetch('/recaptcha', {
         method: 'POST',
@@ -43,5 +43,5 @@ import Layout from '#layouts/Layout.astro';
           }
         });
     }
-  </script>
+  </script> -->
 </Layout>
