--- a/src/pages/demo/cq-switcher-demo.astro
+++ b/src/pages/demo/cq-switcher-demo.astro
@@ -4,11 +4,7 @@ import CqSwitcher from '#components/cq/CqSwitcher.astro';
 import Layout from '#layouts/Layout.astro';
 ---
 
-<Layout
-  title="test Me"
-  description="Lorem ipsum dolor sit amet"
-  centerWidth="100%"
->
+<Layout title="test Me" description="Lorem ipsum dolor sit amet" maxW="100%">
   <Box>
     <Box borderWidth="0">
       <h4>Components</h4>
