--- a/src/pages/store.astro
+++ b/src/pages/store.astro
@@ -1,6 +1,6 @@
 ---
 // import Box from '#astro-custom-layout-components/Box/index.astro';
-import DescriptionList from '#components/DescriptionList/index.astro';
+// import DescriptionList from '#components/DescriptionList/index.astro';
 import StoreNav from '#components/tw-demos/StoreNav.tsx';
 import Layout from '#layouts/SimpleLayout.astro';
 
