--- a/src/components/Card/index.astro
+++ b/src/components/Card/index.astro
@@ -11,9 +11,9 @@ import { Frame, Stack } from '#astro-custom-layout-components/index.js';
 
 import CardTop from './top-bottom.astro';
 
-// interface Props extends HTMLAttributes<'a'> extends CollectionEntry<'blog'>.data;
+// interface Props extends HTMLAttributes<'a'> extends CollectionEntry<'blogCollection'>.data;
 
-// type EntryType = CollectionEntry<'blog'>;
+// type EntryType = CollectionEntry<'blogCollection'>;
 
 interface Props extends HTMLAttributes<'article'> {
   slug: string;
