--- a/src/pages/blog/[pid].astro
+++ b/src/pages/blog/[pid].astro
@@ -7,7 +7,7 @@ export const prerender = true;
 
 export async function getStaticPaths() {
   //const posts = await getCollection('blog', ({ data }) => data.draft !== true);
-  const posts = await getCollection('blog');
+  const posts = await getCollection('blogCollection');
   return posts.map((post) => ({
     params: { pid: decodeURI(post.id) },
     props: { post },
@@ -20,6 +20,6 @@ const { post } = Astro.props;
 const { Content } = await render(post);
 ---
 
-<MarkdownPostLayout blogData={post.data}>
+<MarkdownPostLayout {...post}>
   <Content />
 </MarkdownPostLayout>
