--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,8 +1,7 @@
 ---
 // import Author from '@cc/Author.astro'
 import { Image } from 'astro:assets';
-import type { z } from 'astro:content';
-import { type CollectionEntry,getEntry  } from 'astro:content';
+import { type CollectionEntry  } from 'astro:content';
 
 import {
   Box,
@@ -13,7 +12,7 @@ import {
 import Author from '#components/Author/index.astro';
 import FormattedDate from '#components/FormattedDate.astro';
 import Layout from '#layouts/Layout.astro';
-import { blogSchema } from '#schemas/index.ts';
+// import { blogSchema } from '#schemas/index.ts';
 
 // interface Props {
 //   data: BlogSchemaType;
