--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import DemoMenu from '#components/DemoMenu.astro';
 ---
 
 <!-- <div class="bg-light dark:bg-gray-800"> -->
-<div class="bg-mint-500 flex flex-row justify-end">
+<div class="flex flex-row justify-end bg-mint-500">
   <div class="justify-self-center-1 grow border">
     <DemoMenu />
   </div>
