--- a/src/pages/demo/harmonic-demo.astro
+++ b/src/pages/demo/harmonic-demo.astro
@@ -19,31 +19,31 @@ import Layout from '#layouts/Layout.astro';
 
   <div class="flex flex-col gap-4 text-white">
     <div
-      class="from-regal-blue grow bg-linear-to-t to-indigo-500"
+      class="grow bg-linear-to-t from-regal-blue to-indigo-500"
       style={{ width: 'var(--h1)' }}
     >
       s0
     </div>
     <div
-      class="from-regal-blue grow bg-linear-to-t to-indigo-500"
+      class="grow bg-linear-to-t from-regal-blue to-indigo-500"
       style={{ width: 'var(--h2)' }}
     >
       s1
     </div>
     <div
-      class="from-regal-blue grow bg-linear-to-t to-indigo-500"
+      class="grow bg-linear-to-t from-regal-blue to-indigo-500"
       style={{ width: 'var(--h3)' }}
     >
       s4
     </div>
     <div
-      class="from-regal-blue grow bg-linear-to-t to-indigo-500"
+      class="grow bg-linear-to-t from-regal-blue to-indigo-500"
       style={{ width: 'var(--h4)' }}
     >
       s6
     </div>
     <div
-      class="from-regal-blue grow bg-linear-to-t to-indigo-500"
+      class="grow bg-linear-to-t from-regal-blue to-indigo-500"
       style={{ width: 'var(--h5)' }}
     >
       s7
